navbar fix scroll to visible

--- a/styles/Pages/home.module.scss
+++ b/styles/Pages/home.module.scss
@@ -14,7 +14,7 @@
     grid-column: 1/span 6;
     grid-row: 1/ span 1;
     // border: 1px solid red;
-    overflow: scroll;
+    overflow: visible;
     }
  
   .home{
